--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -34,4 +34,4 @@ jobs:
 
           echo '![](./feature_importance.png)' >> report.md
           echo '![](./residuals.png)' >> report.md
-          #cml comment create report.md
+          cml comment create report.md
